# ga_fcnpr

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/alice/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
lib/alice/docs/: Doxyfile  Makefile  changelog.rst  cli.rst  command.rst  conf.py  environment.rst  index.rst  installation.rst  macro_api.rst  modes.rst  settings.rst  store.rst  store_api.rst  tutorial1.rst  tutorial2.rst  tutorial3.rst  tutorial4.rst  tutorial5.rst  validators.rst
lib/alice/examples/: CMakeLists.txt  alias  demo.cpp
lib/alice/examples/tutorial1/: tutorial1.cpp
lib/alice/examples/tutorial2/: tutorial2.cpp
lib/alice/examples/tutorial3/: tutorial3.cpp
lib/alice/examples/tutorial4/: tutorial4.cpp
lib/alice/examples/tutorial5/: tutorial5.cpp
lib/alice/include/: CMakeLists.txt
lib/alice/include/alice/: alice.hpp  api.hpp  cli.hpp  command.hpp  readline.hpp  rules.hpp  settings.hpp  store.hpp  store_api.hpp  validators.hpp
lib/alice/lib/: CMakeLists.txt
lib/alice/lib/any/: any.hpp
lib/alice/lib/cli11/: CLI11.hpp
lib/alice/lib/json/: json.hpp
lib/alice/test/: CMakeLists.txt  command.cpp  json.cpp  store.cpp  tests.cpp  types.cpp  utils.cpp
lib/alice/tools/: AliceTools.cmake
lib/args-parser/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
lib/args-parser/src/: example.cpp
lib/args-parser/test/: .gitignore  options.cpp
lib/json/: README.md
lib/mockturtle/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml
lib/mockturtle/docs/: Doxyfile  Makefile  acknowledgments.rst  changelog.rst  conf.py  events.rst  implementations.rst  index.rst  installation.rst  network.rst  philosophy.rst  properties.rst  views.rst
lib/mockturtle/docs/algorithms/: akers_synthesis.rst  cleanup.rst  collapse_mapped.rst  cut_enumeration.rst  cut_rewriting.rst  dont_cares.rst  gates_to_nodes.rst  lut_mapping.rst  mig_algebraic_rewriting.rst  node_resynthesis.rst  reconv_cut.rst  refactoring.rst  resubstitution.rst  simulation.rst
lib/mockturtle/docs/generators/: arithmetic.rst  control.rst  modular_arithmetic.rst
lib/mockturtle/docs/io/: lorina_readers.rst  writers.rst
lib/mockturtle/docs/utils/: util_data_structures.rst
lib/mockturtle/include/: CMakeLists.txt
lib/mockturtle/include/mockturtle/: interface.hpp  mockturtle.hpp  traits.hpp
lib/mockturtle/lib/: CMakeLists.txt
lib/mockturtle/lib/abcsat/: AbcGlucose.cpp  CMakeLists.txt  Glucose.cpp  SimpSolver.cpp  satSolver.cpp  satStore.cpp
lib/mockturtle/test/: CMakeLists.txt  test.cpp  test_networks.hpp  traits.cpp
lib/mockturtle/test/algorithms/: akers_synthesis.cpp  cleanup.cpp  collapse_mapped.cpp  cut_enumeration.cpp  cut_rewriting.cpp  dont_cares.cpp  gates_to_nodes.cpp  lut_mapping.cpp  mig_algebraic_rewriting.cpp  node_resynthesis.cpp  quality.cpp  reconv_cut.cpp  reconv_cut2.cpp  refactoring.cpp  resubstitution.cpp  simulation.cpp  xmg_algebraic_rewriting.cpp
lib/mockturtle/test/generators/: arithmetic.cpp  modular_arithmetic.cpp  random_logic_network.cpp  sorting.cpp
lib/mockturtle/test/io/: aiger_reader.cpp  bench_reader.cpp  pla_reader.cpp  verilog_reader.cpp  (+3 more)
src/: Astar.cpp  Astar.h  CMakeLists.txt  Cell.cpp  Cell.h  ChessBoard.cpp  ChessBoard.h  Gittest.cpp  Network.cpp  Network.h  PandR_GA.cpp  PandR_GA.h  Types.h  test001.cpp
test/: CMakeLists.txt  CellTest.cpp  ChessBoardTest.cpp  NetworkTest.cpp  PandR_GATest.cpp  test.sh
test/benchmark/: 1bitAdderAOIG.v  1bitAdderMaj.v  FA.v  RCA2.v  c17.v  c432.v  clpl.v  mux21.v  mux41.v  newtag.v  xor2.v  xor5R.v
test/performance/: test.py
(+203 files in other folders)
